# RetinaFace_LPRNet_TensorRT

./: 1.8.1  correlation_custom.py  correlation_custom_test.py  dataloader_for_calibration.py  demo_retina+lprnet.py  demo_torch.py  demo_trt.py  demo_trt_fpn_reduced.py  demo_trt_fpn_reduced_async.py  demo_trt_jetson.py  demo_trt_jetson_fpn_reduced.py  demo_trt_jetson_fpn_reduced_async.py  demo_yolov5+lprnet.py  detect_lpd.py  detect_lpr.py  detect_lpr_trt.py  detect_yolov5.py  export_onnx.py  gen_data.py  inference.py  my_test.py  readme.md  readme_zh.md  task.py  test.py  train.py  video_decode_using_hardware_codec_example.py  命令.txt
Project_cpp/: CMakeLists.txt  LPRnet_multiline.cpp  common.hpp  decode.cu  decode.h  demo.cpp  demo_mt.cpp  problems.txt  retina_mnet_plate.cpp
config/: lpr.yml  单层蓝牌+绿牌_lpr.yml
data/: config_gen.py  load_data.py  random_plate.py
data/chinese/: blue_plate.py
datasets/: prepare_ccpd.py
retina_lpd/: detect.py
retina_lpd/data/: __init__.py  config.py  data_augment.py
retina_lpd/layers/functions/: prior_box.py
retina_lpd/layers/modules/: multibox_loss.py
retina_lpd/models/: retina.py
retina_lpd/utils/: __init__.py
retina_lpd/utils/nms/: py_cpu_nms.py
retina_lpd/weights/ccpd_custom/: mobilenet0.25_epoch_100_ccpd_blue_green_202310222226.pth  mobilenet0.25_epoch_100_ccpd_custom_202310212219.pth  mobilenet0.25_epoch_24_ccpd_blue+green+yellow+white_20231101.pth
